# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.33 2009/08/17 20:24:00 vapier Exp $

  15 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  e2fsprogs-libs-1.41.8.ebuild:
  Rekeyword ~x86-fbsd now that libSM doesn't need libuuid anymore on
  FreeBSD.

  13 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  e2fsprogs-libs-1.41.8.ebuild:
  Export VARTEXFONTS=${T}/fonts wrt #281390 to avoid LaTeX sandbox violation.

  22 Jul 2009; Alexis Ballier <aballier@gentoo.org>
  e2fsprogs-libs-1.41.8.ebuild:
  Keyword -x86-fbsd due to bug #278667

  20 Jul 2009; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.8.ebuild:
  Disable libuuid/libblkid checks since we dont need them here.

*e2fsprogs-libs-1.41.8 (16 Jul 2009)

  16 Jul 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.8.ebuild:
  Version bump #269378 by Matthias Schwarzott.

*e2fsprogs-libs-1.41.7 (01 Jul 2009)

  01 Jul 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.7.ebuild:
  Version bump.

  20 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.3-r1.ebuild, e2fsprogs-libs-1.41.6.ebuild:
  Pull in pkg-config #273042 by Zhang, Hongjiu.

*e2fsprogs-libs-1.41.6 (30 May 2009)

  30 May 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.6.ebuild:
  Version bump.

*e2fsprogs-libs-1.41.5 (29 May 2009)

  29 May 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.5.ebuild:
  Version bump #267402 by Paul Mulders.

  15 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.4.ebuild:
  Force recent version of glibc for tls support.

*e2fsprogs-libs-1.41.4 (28 Jan 2009)

  28 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.4.ebuild:
  Version bump.

*e2fsprogs-libs-1.41.3-r1 (30 Dec 2008)

  30 Dec 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
  +e2fsprogs-libs-1.41.3-r1.ebuild: