@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.33 2009/08/17 20:24:00 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.34 2009/08/23 21:27:55 vapier Exp $
+
+*e2fsprogs-libs-1.41.9 (23 Aug 2009)
+
+  23 Aug 2009; Mike Frysinger <vapier@gentoo.org>
+  +e2fsprogs-libs-1.41.9.ebuild:
+  Version bump #282445 by Marcin Mirosław.
 
   15 Aug 2009; Alexis Ballier <aballier@gentoo.org>
   e2fsprogs-libs-1.41.8.ebuild:
